--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,18 +1,112 @@
-name: GitHub Actions Demo
-run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
-on: [push]
+name: wf Release
+
+# 触发条件: 这里是push以”v“开头的tag触发
+on:
+  push:
+    # 根据branch或者tags来触发
+    # branches:
+    #  - main
+
+    tags:
+      - "v*"
+    # 忽略的标签类型，不触发构建流程(和tags不能同时写)
+    # tags-ignore:
+    #   - "d*"
+  
+  # strategy:
+  # 矩阵使用: ${{ matrix.os }}
+  # 下面两个矩阵，会代码就会执行 2 * 3 = 6次
+  # matrix:
+  #  os: [ubuntu-16.04, ubuntu-18.04]
+  #  node: [6, 8, 10]
+
+# 一次持续集成的运行，可以完成多个任务(下面就build)
 jobs:
-  Explore-GitHub-Actions:
+  builds:
+    # 构建的系统(ubuntu、windows、macos)
     runs-on: ubuntu-latest
+
+    # 可以依赖其他job
+    # needs: xxxJob、[job1, job2]
+
+    # 构建权限，ncipollo/release-action需要使用
+    permissions:
+      contents: write
+
+    # 操作步骤(按顺序执行)
     steps:
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
-      - name: Check out repository code
-        uses: actions/checkout@v4
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-      - name: List files in the repository
-        run: |
-          ls ${{ github.workspace }}
-      - run: echo "🍏 This job's status is ${{ job.status }}."
+
+      # 拉取仓库代码
+      - uses: actions/checkout@v3
+
+      # 设置Java运行环境(temurin是开源jdk)，可以设置为: 1.8
+      - uses: actions/setup-java@v3
+        with:
+          distribution: temurin
+          java-version: 17
+
+      # 设置gradle环境(比如: 6.5)、打包命令
+      - uses: gradle/gradle-build-action@v2
+        with:
+          gradle-version: current
+          arguments: assembleRelease
+
+      # 签名apk
+      - uses: r0adkll/sign-android-release@v1
+        name: Sign app APK
+        id: sign_app
+        with:
+          releaseDirectory: app/build/outputs/apk/release
+          signingKeyBase64: ${{ secrets.SIGNING_KEY }}
+          alias: ${{ secrets.ALIAS }}
+          keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
+          keyPassword: ${{ secrets.KEY_PASSWORD }}
+        # 还能设置build-tools version，29.0.3好像不支持了
+        env:
+          # override default build-tools version (29.0.3) -- optional
+          BUILD_TOOLS_VERSION: "34.0.0"
+
+      # build-tools可能不存在，用step查看下支持哪些
+      - run: ls /usr/local/lib/android/sdk/build-tools/
+
+      # 重命名apk
+      # GITHUB_REF_NAME是“触发workflow的分支或tag名称”
+      - run: mv ${{steps.sign_app.outputs.signedReleaseFile}} fundark_$GITHUB_REF_NAME.apk
+        # 可以指定shell命令的执行目录
+        # working-directory: ./temp
+        # 只当shell的类型
+        # shell: bash
+
+      # 发布
+      - uses: ncipollo/release-action@v1
+        with:
+          # 要包含到Release Assets中的文件
+          artifacts: "*.apk"
+          # 会使用一个临时的token来创建Release
+          token: ${{ github.token }}
+          # 自动生成一些变化列表之类的内容。
+          generateReleaseNotes: true
+
+  # 增加个notice的job，在打包完成后发邮件通知
+#  notice:
+#    runs-on: ubuntu-latest
+#
+#    # 依赖于build
+#    needs: builds
+#
+#    # 操作步骤
+#    steps:
+#      - name: Send email
+#        uses: dawidd6/action-send-mail@v3
+#        with:
+#          # 邮箱配置，密码是SMTP服务的授权密码
+#          server_address: smtp.qq.com
+#          server_port: 465
+#          username: ${{secrets.MAIL_USERNAME}}
+#          password: ${{secrets.MAIL_PASSWORD}}
+#
+#          # 邮件内容
+#          subject: Github Actions job result
+#          from: ${{secrets.MAIL_USERNAME}}
+#          to: ${{secrets.MAIL_TOUSERNAME}}
+#          body: Build job of ${{github.repository}} completed successfully!
